--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -14,11 +14,11 @@ Before we conquer this region and redirect our forces to Steadwick, we must anni
 Our Kreegan allies from Eeofol have requested the honor of this mission.
 The Kreegans are fierce warriors; they will relish the slaughter.}
 
-\subsection*{\MakeUppercase{Scenario length}}
+\subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario plays out over 13 rounds.
+This Scenario plays out over 13 Rounds.
 
-\subsection*{\MakeUppercase{Player setup}}
+\subsection*{\MakeUppercase{Player Setup}}
 
 \textbf{Faction:} Inferno
 
@@ -39,12 +39,12 @@ This scenario plays out over 13 rounds.
 
 \textbf{Bonus:} Choose one of the following options:
 \begin{itemize}
-  \item Add a ``Slayer'' spell to your hand
+  \item Add a ``Slayer'' Spell to your hand
   \item Add the ``Armor of Wonder'' Artifact to your hand
   \item Reinforce Magogs and gain 1 \svg{valuables}
 \end{itemize}
 
-\subsection*{\MakeUppercase{AI hero setup}}
+\subsection*{\MakeUppercase{AI Hero Setup}}
 
 \textbf{Faction:} Rampart
 
@@ -52,47 +52,47 @@ This scenario plays out over 13 rounds.
 
 \begin{itemize}
   \item \textbf{Gold Dragon Army:} A Pack of Gold Dragons, a Pack of Unicorns, a Pack of Dendroids, a Pack of Centaurs
-  \item \textbf{Ivor's Army:} A Few Elves\footnote{In Round 9, the Few Elves in Ivor's Army are reinforced to a Pack of Elves.}, Neutral Army at the same level as your Hero level\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}
+  \item \textbf{Ivor's Army:} A Few Elves\footnote{In Round 9, the Few Elves in Ivor's Army are Reinforced to a Pack of Elves.}, Neutral Army at the same Level as your Hero\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}
 \end{itemize}
 
 \textbf{Ivor's Deck:} 1 × Might card, 2 × Magic card, 1 × Skill card
 
-\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \svg{unit_ranged} unit able to make a \svg{unit_ranged} attack), 1 × Magic Arrow Spell card
+\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \svg{unit_ranged} Unit able to make a \svg{unit_ranged} attack), 1 × Magic Arrow Spell card
 
 \textbf{Ivor's Skill:} Archery Ability card (it always resolves its Basic effect)
 
-\subsection*{\MakeUppercase{Map setup}}
+\subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
-\textbf{2 × Starting (I) Map tile}
+\textbf{2 × Starting (I) Map Tile}
 \begin{itemize}
   \item 1 × Inferno (S6)
   \item 1 × Rampart (S4)
 \end{itemize}
 
-\textbf{3 × Far (II--III) Map tile}
+\textbf{3 × Far (II--III) Map Tile}
 \begin{itemize}
   \item \mbox{2 × Inferno (choose from: F16--F18, \#F10)}
   \item 1 × Rampart (choose from: F10--F12)
 \end{itemize}
 
-\textbf{2 × Near (IV--V) Map tile}
+\textbf{2 × Near (IV--V) Map Tile}
 \begin{itemize}
   \item 2 × Rampart (N7, N8)
 \end{itemize}
 
-\textbf{1 × Center (VI--VII) Map tile}
+\textbf{1 × Center (VI--VII) Map Tile}
 \begin{itemize}
-  \item 1 × Dragon Utopia Center Map tile (C1)
+  \item 1 × Dragon Utopia Center Map Tile (C1)
 \end{itemize}
 
-\subsection*{\MakeUppercase{Heroes placement}}
+\subsection*{\MakeUppercase{Heroes Placement}}
 
-The Enemy Hero is represented by one Rampart faction Hero model of your choice
-and appears in the center field of the S4 Starting Map tile.
+The Enemy Hero is represented by one Rampart Faction Hero model of your choice
+and appears in the center Field of the S4 Starting Map Tile.
 
-Place your Hero in the center field of the Inferno Starting Map tile.
+Place your Hero in the center Field of the Inferno Starting Map Tile.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -135,26 +135,26 @@ You fail to defeat the Enemy Hero and the Gold Dragon Armies by the end of the R
 
 \textbf{\nth{13} Round:}
 \begin{itemize}
-  \item At the end of the round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!
+  \item At the end of the Round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!
 \end{itemize}
 
-\textbf{When you complete the scenario:}
+\textbf{When you complete the Scenario:}
 \begin{itemize}
   \item Read: ``Congratulations! You have completed your quest to kill the fearsome beast, and can claim victory!''
 \end{itemize}
 
 
-\subsection*{\MakeUppercase{Additional rules}}
+\subsection*{\MakeUppercase{Additional Rules}}
 
-During this ``Inferno'' campaign scenario, the following rules apply:
+During this ``Inferno'' Campaign Scenario, the following rules apply:
 
 \begin{itemize}
     \item Your Hero does not gain Experience past Level 5.
     \item The Enemy Hero does not move and only waits in their Town. They start with Walls and a Gate on their side of the Combat Board.
-    \item The N7 Map tile cannot be entered until Ivor is defeated.
+    \item The N7 Map Tile cannot be entered until Ivor is defeated.
     \item At the Dragon Utopia location, your Hero fights the Gold Dragons Army.
     \item The ``Castle Gate'' cannot be built.
-    \item If your Hero visits an Obelisk, you may Search (2) the Ability deck, the Artifact deck, or the Spell deck.
+    \item If your Hero Visits an Obelisk, you may Search (2) the Ability Deck, the Artifact Deck, or the Spell Deck.
 \end{itemize}
 
 \vspace*{\fill}
