--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -12,7 +12,7 @@
 }
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This scenario is played over 14 rounds.
+This Scenario is played over 14 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 or 3
@@ -23,43 +23,43 @@ This scenario is played over 14 rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svgunit{bronze} units with the \textit{lowest} Recruitment cost
-  \item A Few \svgunit{bronze} units with the \textit{highest} Recruitment cost
+  \item A Pack of \svgunit{bronze} Units with the \textit{lowest} Recruitment cost
+  \item A Few \svgunit{bronze} Units with the \textit{highest} Recruitment cost
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, City Hall
 
-\textbf{Map tile Pool:} Each player takes 1 random Far (II--III) Map tile
+\textbf{Map Tile Pool:} Each player takes 1 random Far (II--III) Map Tile
 
 \textbf{Additional Bonus:} None
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map tiles and arrange them as shown in the scenario map layout.
+Take the following Map Tiles and arrange them as shown in the Scenario map layout.
 
 \columnbreak
 
-\textbf{For a 2-player scenario:}
+\textbf{For a 2-player Scenario:}
 \begin{itemize}
-  \item 2 × Starting (I) Map tile
-  \item 2 × Far (II--III) Map tile
-  \item 2 × Near (IV--V) Map tile
-  \item 1 × Center (VI--VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
+  \item 2 × Starting (I) Map Tile
+  \item 2 × Far (II--III) Map Tile
+  \item 2 × Near (IV--V) Map Tile
+  \item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile
 \end{itemize}
 
-\textbf{For a 3-player scenario:}
+\textbf{For a 3-player Scenario:}
 \begin{itemize}
-  \item 3 × Starting (I) Map tile
-  \item 3 × Far (II--III) Map tile
-  \item 3 × Near (IV--V) Map tile
-  \item 1 × Center (VI--VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
+  \item 3 × Starting (I) Map Tile
+  \item 3 × Far (II--III) Map Tile
+  \item 3 × Near (IV--V) Map Tile
+  \item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 Slay the Dragon Boss with your Main Hero.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-If the Dragon Boss still lives at the end of the \nth{14} round, all players lose the scenario.
+If the Dragon Boss still lives at the end of the \nth{14} Round, all players lose the Scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -70,25 +70,25 @@ If the Dragon Boss still lives at the end of the \nth{14} round, all players los
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
-Before the start of this scenario:
+Before the start of this Scenario:
 
 \begin{itemize}
   \item Select one of the Dragons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.
     You can choose randomly by picking one of the four shuffled Statistic cards: \textit{Attack} -- Azure, \textit{Defense} -- Crystal, \textit{Knowledge} -- Rust, \textit{Power} -- Faerie.
 \end{itemize}
 
-During this scenario:
+During this Scenario:
 
 \begin{itemize}
   \item Only a Main Hero can kill the Dragon.
-  \item The final battle with the Dragon occurs at the center field of the Center Map tile.
+  \item The final battle with the Dragon occurs at the center Field of the Center Map Tile.
     Please refer to the encounter rules specified in the rules of the selected Dragon Boss.
   \item While fighting a Dragon Boss, ignore Gorgon's special ability.
   \item Heroes are unable to retreat from battles with the Dragon Boss.
-  \item When each player visits an Obelisk, they can choose to roll a Treasure die or receive 1 \svg{experience}.
-  \item Players can visit each Obelisk only once.
-    Afterwards, they must place their Faction cube on the field.
-  \item In the boss encounter, there is no battle round limit.
+  \item When each player Visits an Obelisk, they can choose to roll a Treasure Die or receive 1 \svg{experience}.
+  \item Players can Visit each Obelisk only once.
+    Afterwards, they must place their Faction cube on the Field.
+  \item In the boss encounter, there is no battle Round limit.
 \end{itemize}
 
 \begin{tikzpicture}[overlay]
@@ -130,18 +130,18 @@ During this scenario:
 
   \textbf{Rules:}
   \begin{itemize}
-    \item \textit{Hoarding Tendency:} At the start of each turn, randomly choose a card from the shuffled pile of discarded artifacts.
-      If the artifact is:
+    \item \textit{Hoarding Tendency:} At the start of each Turn, randomly choose a card from the shuffled pile of discarded Artifacts.
+      If the Artifact is:
       \begin{itemize}
         \item A weapon: The Dragon gains one Breath attack that targets three creatures in a row.
-          The unit directly hit in the middle suffers full damage, while the units on both sides suffer 3\,\svg{damage-red} less.
+          The Unit directly hit in the middle suffers full damage, while the Units on both sides suffer 3\,\svg{damage-red} less.
         \item A piece of armor, shield, or clothing: The Dragon gains 3\,\svg{defense}, represented with spare Faction cubes.
           Remove them after they have absorbed damage.
         \item A trinket: The Azure Dragon roars and summons an ice storm, causing all creatures to freeze in fear.
-          This results in every unit moving only 1 battle tile per round, while the Azure Dragon can fly to any tile on the combat board.
+          This results in every Unit moving only 1 Field per Round, while the Azure Dragon can fly to any Field on the Combat Board.
       \end{itemize}
-    \item The Azure Dragon is immune to all spells cast against it.
-    \item Buffs and enhancements cast on player's units remain effective.
+    \item The Azure Dragon is immune to all Spells cast against it.
+    \item Buffs and enhancements cast on player's Units remain effective.
   \end{itemize}
 }
 
@@ -195,18 +195,18 @@ During this scenario:
 
   \textbf{Rules:}
   \begin{itemize}
-    \item At the start of every battle round, check if any of the Golems were removed in the previous round.
+    \item At the start of every battle Round, check if any of the Golems were removed in the previous Round.
       If so, spawn one new Diamond or Gold Golem (chosen randomly) in the last row of the battlefield.
     \item \textit{Golem Devour:} The Crystal Dragon can consume Golems to regain health.
-      During its turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume it, removing a certain amount of \svg{damage-red} based on the type of Golem consumed:
+      During its Turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume it, removing a certain amount of \svg{damage-red} based on the type of Golem consumed:
       \begin{itemize}
         \item Consuming a Gold Golem: Remove 2 \svg{damage-red}.
         \item Consuming a Diamond Golem: Remove 4 \svg{damage-red}.
-        \item[] \textbf{Note:} The Crystal Dragon can only consume one Golem per turn.
+        \item[] \textbf{Note:} The Crystal Dragon can only consume one Golem per Turn.
       \end{itemize}
     \item Golem Abilities: Gold and Diamond Golems do not possess any additional abilities beyond those specified on their cards.
       They primarily serve as fodder for the Crystal Dragon's health regeneration.
-    \item The Crystal Dragon \textit{retaliates twice} per battle round.
+    \item The Crystal Dragon \textit{retaliates twice} per battle Round.
   \end{itemize}
 }
 
@@ -254,22 +254,22 @@ During this scenario:
   \begin{enumerate}
     \item Place the Rust Dragon miniature/card on the battlefield.
       Ignore its ability.
-    \item Prepare four spare M\&M deck cards to mark pools of acid.
+    \item Prepare four spare M\&M Deck cards to mark pools of acid.
   \end{enumerate}
 
   \medskip
 
   \textbf{Rules:}
   \begin{itemize}
-    \item The Rust Dragon is immune to basic spells.
-    \item \textit{Corrosive Vomit:} The Rust Dragon has a powerful crowd control ability that allows it to spew four pools of sulfuric acid onto the battlefield \textit{at the beginning} of each combat round.
-      Use M\&M deck cards placed face down to mark their locations.
-    \item The Rust Dragon cannot place pools on the same tiles as in the previous round.
-      Mark the tiles with spare Faction cubes to indicate where the pools were located.
-    \item The pools of sulfuric acid block battlefield tiles and impede movement for one round only.
-      They serve as obstacles for both players and the Dragon.
-    \item The Rust Dragon's passive ability, \textit{Corrosion}, decreases an enemy unit's armor by 2 with each attack.
-      Place a spare Faction cube on the unit's card to indicate this effect.
+    \item The Rust Dragon is immune to basic Spells.
+    \item \textit{Corrosive Vomit:} The Rust Dragon has a powerful crowd control ability that allows it to spew four pools of sulfuric acid onto the battlefield \textit{at the beginning} of each Combat Round.
+      Use M\&M Deck cards placed face down to mark their locations.
+    \item The Rust Dragon cannot place pools on the same Fields as in the previous Round.
+      Mark the Fields with spare Faction cubes to indicate where the pools were located.
+    \item The pools of sulfuric acid block battlefield Fields and impede movement for one Round only.
+      They serve as Obstacles for both players and the Dragon.
+    \item The Rust Dragon's passive ability, \textit{Corrosion}, decreases an enemy Unit's armor by 2 with each attack.
+      Place a spare Faction cube on the Unit's card to indicate this effect.
       Corrosion stacks up to -4 \svg{defense}.
   \end{itemize}
 }
@@ -321,28 +321,28 @@ During this scenario:
   \begin{enumerate}
     \item Place 2 Faerie Dragon cards on the battlefield.
       Ignore their abilities.
-    \item Place 1 Dendroid card from the \svg{silver} neutral units deck onto the battlefield, and place 3 additional cards face down to represent the other 3 Dendroids.
+    \item Place 1 Dendroid card from the \svg{silver} Neutral Units Deck onto the battlefield, and place 3 additional cards face down to represent the other 3 Dendroids.
   \end{enumerate}
 
   \medskip
 
   \textbf{Rules:}
   \begin{itemize}
-    \item The Faerie Dragon is immune to basic spells.
-    \item The Faerie Dragon can cast up to two different spells per battle round.
-    \item All spells are displayed visibly next to the combat board:
+    \item The Faerie Dragon is immune to basic Spells.
+    \item The Faerie Dragon can cast up to two different Spells per battle Round.
+    \item All Spells are displayed visibly next to the Combat Board:
       \begin{enumerate}
-        \item The first spell is \textit{Lightning}.
-        \item The second spell is \textit{Cure}.
-        \item For the third spell, the Faerie Dragon randomly picks an expert spell from the Spell deck, excluding Map \svg{map} spells.
-          If a Map \svg{map} spell is picked, draw another spell.
+        \item The first Spell is \textit{Lightning}.
+        \item The second Spell is \textit{Cure}.
+        \item For the third Spell, the Faerie Dragon randomly picks an expert Spell from the Spell Deck, excluding Map \svg{map} Spells.
+          If a Map \svg{map} Spell is picked, draw another Spell.
       \end{enumerate}
-    \item \textit{Trickster:} In the first round of the battle, the first targeted Faerie Dragon is a mere mirage.
+    \item \textit{Trickster:} In the first Round of the battle, the first targeted Faerie Dragon is a mere mirage.
       It inflicts damage, but disappears from the battlefield when hit by an enemy.
     \item Dendroids' Ability: Each Dendroid holds a key to the Faerie Dragon's power.
-      After the second Dendroid dies, start removing one spell from the Faerie Dragon's spellbook, beginning with the third spell.
-      Decrease the dragon's spell empowerment \svg{empower} by one (starting from its maximum) upon vanquishing the 2nd, 3rd, and 4th Dendroids.
-      When there are no Dendroids left, the dragon loses the ability to cast spells.
+      After the second Dendroid dies, start removing one Spell from the Faerie Dragon's spellbook, beginning with the third Spell.
+      Decrease the dragon's Spell Empowerment \svg{empower} by one (starting from its maximum) upon vanquishing the 2nd, 3rd, and 4th Dendroids.
+      When there are no Dendroids left, the dragon loses the ability to cast Spells.
   \end{itemize}
 }
 
