--- a/sections/what_to_play.tex
+++ b/sections/what_to_play.tex
@@ -3,7 +3,7 @@
 
 \begin{multicols}{2}
 
-Follow these suggestions if you're not sure which scenario is best for you.
+Follow these suggestions if you're not sure which Scenario is best for you.
 
 \subsection*{Cooperative Mode}
 
@@ -13,17 +13,17 @@ For more tactical play for two players, try \pagelink{Sentinels}{Sentinels}.
 
 \subsection*{Clash Mode}
 
-If you'd like to play a 2- or 4-player ``capture the Grail'' scenario with interesting twists, try \pagelink{Bloody Grail}{Bloody Grail}.
+If you'd like to play a 2- or 4-player ``capture the Grail'' Scenario with interesting twists, try \pagelink{Bloody Grail}{Bloody Grail}.
 For an exciting boss fight for 2-3 players, choose \pagelink{The Hunt}{The Hunt}.
 For an inevitable epic battle between two players with a possible siege, play \pagelink{Dragoncurse Castle}{Dragoncurse Castle}.
 
 \subsection*{Campaign}
 
-There is a 3-scenario Inferno \pagelink{1. A Devilish Plan}{Dungeons and Devils} Campaign at the end if you prefer solo play.
+There is a 3-Scenario Inferno \pagelink{1. A Devilish Plan}{Dungeons and Devils} Campaign at the end if you prefer solo play.
 
 \subsection*{Recommendations}
 
-For information regarding your play time, strategizing, and custom rules, checkout out \pagelink{Recommendations}{recommendations} at the and of this book.
+For information regarding your play time, strategizing, and custom rules, checkout out \pagelink{Recommendations}{Recommendations} at the and of this book.
 
 \end{multicols}
 
