--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -7,11 +7,11 @@
 
 \textbf{Source:} ...
 
-\subsection*{\MakeUppercase{Scenario length}}
+\subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario plays out over ... rounds.
+This Scenario plays out over ... Rounds.
 
-\subsection*{\MakeUppercase{Player setup}}
+\subsection*{\MakeUppercase{Player Setup}}
 
 \textbf{Faction:} ...
 
@@ -36,7 +36,7 @@ This scenario plays out over ... rounds.
     \item ...
 \end{itemize}
 
-\subsection*{\MakeUppercase{AI hero setup}}
+\subsection*{\MakeUppercase{AI Hero Setup}}
 
 \textbf{Faction:} ...
 
@@ -50,22 +50,22 @@ This scenario plays out over ... rounds.
 
 \textbf{Special:} ...
 
-\subsection*{\MakeUppercase{Map setup}}
+\subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
-\textbf{X × Starting (I) Map tile}
+\textbf{X × Starting (I) Map Tile}
 \begin{itemize}
     \item ... additional constraints ...
 \end{itemize}
 
-\textbf{Y × Far (II--III) Map tile}
+\textbf{Y × Far (II--III) Map Tile}
 
-\textbf{Z × Near (IV--V) Map tile}
+\textbf{Z × Near (IV--V) Map Tile}
 
-\subsection*{\MakeUppercase{Heroes placement}}
+\subsection*{\MakeUppercase{Heroes Placement}}
 
-... describe how your and enemy heroes will be placed ...
+... describe how your and enemy Heroes will be placed ...
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 ...
@@ -76,7 +76,7 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 \subsection*{\MakeUppercase{Timed Events}}
 
 % Unless you have a rich and non-linear story, write it under specific
-% rounds here.
+% Rounds here.
 %
 % Otherwise create a new subsection "The Story" at the end and refer to it.
 
@@ -103,9 +103,9 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 %   \item Repeat Timed Events of Rounds 7 and 8.
 % \end{itemize}
 
-\subsection*{\MakeUppercase{Additional rules}}
+\subsection*{\MakeUppercase{Additional Rules}}
 
-During this ``... faction ...'' campaign scenario, the following rules apply:
+During this ``... Faction ...'' Campaign Scenario, the following rules apply:
 
 \begin{itemize}
   \item ...
@@ -115,7 +115,7 @@ During this ``... faction ...'' campaign scenario, the following rules apply:
 
 \newpage
 
-% NOTE: The last page of scenario preparation should use
+% NOTE: The last page of Scenario preparation should use
 % multicols instead of multicols* to create space for map.
 % \begin{multicols}{2}
 % ... your content that overflows to the second page ...
@@ -131,7 +131,7 @@ During this ``... faction ...'' campaign scenario, the following rules apply:
 
 \begin{multicols*}{2}
 
-\subsection*{\MakeUppercase{The story}}
+\subsection*{\MakeUppercase{The Story}}
 
 ... put your immersive story here ...
 
