--- a/templates/default.tex
+++ b/templates/default.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Cooperative scenario}{...}{\images/title.png}
+\addscenariosection{1}{Cooperative Scenario}{...}{\images/title.png}
 
 \begin{multicols*}{2}
 
@@ -11,7 +11,7 @@
 
 \subsection*{\MakeUppercase{Scenario Length}}
 
-This scenario is played over ... rounds.
+This Scenario is played over ... Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 
@@ -31,7 +31,7 @@ This scenario is played over ... rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling...
 
-\textbf{Map tile Pool:} Each player takes X [random] Near/Far Map (A--B) Tiles...
+\textbf{Map Tile Pool:} Each player takes X [random] Near/Far Map (A--B) Tiles...
 
 \textbf{Additional Bonus:} Choose one of the following options:
 
@@ -41,16 +41,16 @@ This scenario is played over ... rounds.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
-Take the following Map tiles and arrange them as shown in the scenario map layout:
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
-  \textbf{X × Starting (I) Map tile}
+  \textbf{X × Starting (I) Map Tile}
 \begin{itemize}
     \item ... additional constraints ...
 \end{itemize}
 
-\textbf{Y × Far (II--III) Map tile}
+\textbf{Y × Far (II--III) Map Tile}
 
-\textbf{Z × Near (IV--V) Map tile}
+\textbf{Z × Near (IV--V) Map Tile}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 ...
@@ -91,7 +91,7 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 
 \end{multicols*}
 
-% Uncomment if you need a table to define unit strengths or other parameters of the game
+% Uncomment if you need a table to define Unit strengths or other parameters of the game
 % \hommtable[]{12}{
 %   \centering
 %   \medskip
