--- a/translations/dragoncurse_castle.tex/fr.po
+++ b/translations/dragoncurse_castle.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-22 18:15+0200\n"
 "PO-Revision-Date: 2024-07-31 22:11+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -31,6 +31,9 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:16 clash/dragoncurse_castle.tex:17
+#: campaigns/inferno_devilish_plan.tex:18
+#: campaigns/inferno_steadwicks_fall.tex:16
+#: campaigns/inferno_deal_with_the_devil.tex:20
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
@@ -38,7 +41,11 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/sentinels.tex:20 clash/dragoncurse_castle.tex:21
+#: coops/sentinels.tex:20 coops/titans_stronghold.tex:21
+#: coops/emerald_island.tex:18 clash/dragoncurse_castle.tex:21
+#: campaigns/inferno_devilish_plan.tex:22
+#: campaigns/inferno_steadwicks_fall.tex:20
+#: campaigns/inferno_deal_with_the_devil.tex:24
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
@@ -57,7 +64,7 @@ msgstr ""
 #: coops/sentinels.tex:67 coops/titans_stronghold.tex:68
 #: coops/emerald_island.tex:58 clash/bloody_grail.tex:64 clash/the_hunt.tex:65
 #: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:108
-#: campaigns/inferno_steadwicks_fall.tex:129
+#: campaigns/inferno_steadwicks_fall.tex:124
 #: campaigns/inferno_deal_with_the_devil.tex:120
 #, no-wrap
 msgid ""
@@ -78,7 +85,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:37 clash/dragoncurse_castle.tex:36
 #, no-wrap
 msgid ""
-"\\textbf{Map tile Pool:} None\n"
+"\\textbf{Map Tile Pool:} None\n"
 "\n"
 msgstr ""
 
@@ -141,7 +148,7 @@ msgstr ""
 #: clash/dragoncurse_castle.tex:19
 #, no-wrap
 msgid ""
-"This scenario is played over a maximum of 11 rounds.\n"
+"This Scenario is played over a maximum of 11 Rounds.\n"
 "\n"
 msgstr ""
 
@@ -167,7 +174,7 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × A Pack \\svgunit{bronze} Units with the lowest recruitment cost\n"
+"  \\item 2 × A Pack \\svgunit{bronze} Units with the lowest Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -177,12 +184,12 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
-"Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
+"Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Starting (I) Map tile\n"
-"  \\item 2 × Far (II-III) Map tile\n"
-"  \\item 5 × Near (IV-V) Map tile\n"
-"  \\item 2 × Center (VI-VII) Map tiles, blindly choosing one with the Random Town field and the other with a Dragon Utopia field.\n"
+"  \\item 2 × Starting (I) Map Tile\n"
+"  \\item 2 × Far (II-III) Map Tile\n"
+"  \\item 5 × Near (IV-V) Map Tile\n"
+"  \\item 2 × Center (VI-VII) Map Tiles, blindly choosing one with the Random Town Field and the other with a Dragon Utopia Field.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -192,8 +199,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
-"When the Random Town is captured for the first time, players continue playing the current round and then play \\textbf{one additional final round}.\n"
-"The player controlling the Random Town at the end of that final round is the winner.\n"
+"When the Random Town is captured for the first time, players continue playing the current Round and then play \\textbf{one additional final Round}.\n"
+"The player controlling the Random Town at the end of that final Round is the winner.\n"
 "\n"
 msgstr ""
 
@@ -202,8 +209,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
-"At the end of the \\nth{10} round, if no player controls the Random Town, both players lose the game (\\textit{the local ruler returns to the castle and regains control of the province}).\n"
-"However, if the Random Town is first captured in the \\nth{10} round, the game proceeds as normal to its additional final round (in this case, the \\nth{11} round).\n"
+"At the end of the \\nth{10} Round, if no player controls the Random Town, both players lose the game (\\textit{the local ruler returns to the castle and regains control of the province}).\n"
+"However, if the Random Town is first captured in the \\nth{10} Round, the game proceeds as normal to its additional final Round (in this case, the \\nth{11} Round).\n"
 "\n"
 msgstr ""
 
@@ -225,18 +232,18 @@ msgstr ""
 msgid ""
 "{2}\n"
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
-"During this scenario:\n"
+"During this Scenario:\n"
 "\\begin{itemize}\n"
-"  \\item Whenever an Obelisk is visited for the first time, the visiting player gains 2 \\svg{building_materials}\n"
+"  \\item Whenever an Obelisk is Visited for the first time, the Visiting player gains 2 \\svg{building_materials}\n"
 "  \\item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.\n"
 "  \\item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:\n"
 "    \\begin{itemize}\n"
-"      \\item Place a newly recruited Secondary Hero.\n"
+"      \\item Place a newly Recruited Secondary Hero.\n"
 "      \\item Place the Main Hero when defeated.\n"
 "      \\item Temporarily transport the army to, for 8 \\svg{gold}, when the Random Town is attacked.\n"
 "    \\end{itemize}\n"
-"  \\item The first player to visit the Dragon Utopia (after defeating the defending Azure unit(s)) draws cards from the Neutral Units \\svgunit{azure} deck until a Dragon not associated with any faction is drawn.\n"
-"    The player may immediately recruit that Dragon for free.\n"
+"  \\item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws cards from the Neutral Units \\svgunit{azure} Deck until a Dragon not associated with any Faction is drawn.\n"
+"    The player may immediately Recruit that Dragon for free.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
