--- a/translations/emerald_island.tex/pl.po
+++ b/translations/emerald_island.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-22 23:44+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -31,8 +31,25 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
+#: coops/sentinels.tex:20 coops/titans_stronghold.tex:21
+#: coops/emerald_island.tex:18 clash/dragoncurse_castle.tex:21
+#: campaigns/inferno_devilish_plan.tex:22
+#: campaigns/inferno_steadwicks_fall.tex:20
+#: campaigns/inferno_deal_with_the_devil.tex:24
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Player Setup}}\n"
+"\n"
+msgstr ""
+"\\subsection*{\\MakeUppercase{Przygotowanie Graczy}}\n"
+"\n"
+
+#. type: multicols*
 #: coops/sentinels.tex:40 coops/titans_stronghold.tex:41
 #: coops/emerald_island.tex:38 clash/the_hunt.tex:37
+#: campaigns/inferno_devilish_plan.tex:65
+#: campaigns/inferno_steadwicks_fall.tex:70
+#: campaigns/inferno_deal_with_the_devil.tex:77
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
@@ -44,7 +61,7 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:57 coops/titans_stronghold.tex:60
 #: coops/emerald_island.tex:50 campaigns/inferno_devilish_plan.tex:98
-#: campaigns/inferno_steadwicks_fall.tex:116
+#: campaigns/inferno_steadwicks_fall.tex:111
 #: campaigns/inferno_deal_with_the_devil.tex:110
 #, no-wrap
 msgid ""
@@ -57,7 +74,7 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:61 coops/titans_stronghold.tex:64
 #: coops/emerald_island.tex:54 campaigns/inferno_devilish_plan.tex:102
-#: campaigns/inferno_steadwicks_fall.tex:121
+#: campaigns/inferno_steadwicks_fall.tex:116
 #: campaigns/inferno_deal_with_the_devil.tex:114
 #, no-wrap
 msgid ""
@@ -71,7 +88,7 @@ msgstr ""
 #: coops/sentinels.tex:67 coops/titans_stronghold.tex:68
 #: coops/emerald_island.tex:58 clash/bloody_grail.tex:64 clash/the_hunt.tex:65
 #: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:108
-#: campaigns/inferno_steadwicks_fall.tex:129
+#: campaigns/inferno_steadwicks_fall.tex:124
 #: campaigns/inferno_deal_with_the_devil.tex:120
 #, no-wrap
 msgid ""
@@ -92,33 +109,20 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/titans_stronghold.tex:21 coops/emerald_island.tex:18
-#: campaigns/inferno_devilish_plan.tex:22
-#: campaigns/inferno_steadwicks_fall.tex:20
-#: campaigns/inferno_deal_with_the_devil.tex:24
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Player setup}}\n"
-"\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Przygotowanie Graczy}}\n"
-"\n"
-
-#. type: multicols*
 #: coops/titans_stronghold.tex:33 coops/emerald_island.tex:30
 #, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\svgunit{bronze} units of your choice\n"
-"  \\item A Few \\svgunit{bronze} units of your choice\n"
+"  \\item A Pack of \\svgunit{bronze} Units of your choice\n"
+"  \\item A Few \\svgunit{bronze} Units of your choice\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item Grupa \\svgunit{bronze} jednostek do wyboru\n"
-"  \\item Garstka \\svgunit{bronze} jednostek do wyboru\n"
+"  \\item Grupa \\svgunit{bronze} Jednostek do wyboru\n"
+"  \\item Garstka \\svgunit{bronze} Jednostek do wyboru\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -138,17 +142,17 @@ msgstr ""
 #: coops/titans_stronghold.tex:43 coops/emerald_island.tex:40
 #, no-wrap
 msgid ""
-"Take the following Map tiles and arrange them as shown in the scenario map layout ($P$ stands for the number of players):\n"
+"Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):\n"
 "\n"
 msgstr ""
-"Weź następujące Kafelki Mapy i ułóż je zgodnie z układem mapy scenariusza ($G$ oznacza liczbę graczy):\n"
+"Weź następujące Kafelki Mapy i ułóż je zgodnie z układem mapy Scenariusza ($G$ oznacza liczbę graczy):\n"
 "\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: coops/emerald_island.tex:3
 msgid ""
-"\\addscenariosection{1}{Cooperative scenario}{Emerald Island}{\\images/"
+"\\addscenariosection{1}{Cooperative Scenario}{Emerald Island}{\\images/"
 "logistics.png}"
 msgstr ""
 "\\addscenariosection{1}{Tryb Kooperacyjny}{Wyspa Szmaragdów}{\\images/"
@@ -177,17 +181,17 @@ msgstr ""
 "\\textit{Lord Markham postanowił zorganizować polowanie na skarby, a ty i twoi przyjaciele weźmiecie w nim udział.\n"
 "  Ale pośpieszcie się! Inne drużyny też są na tropie, a jedna z nich jest już prawie na mecie!\n"
 "  A przede wszystkim uważajcie: wygląda na to, że na tej wyspie czai się stworzenie zidentyfikowane jako smok!}\n"
-"\\subsection*{\\MakeUppercase{Długość scenariusza}}\n"
+"\\subsection*{\\MakeUppercase{Długość Scenariusza}}\n"
 "\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:16
 #, no-wrap
 msgid ""
-"This scenario is played over 8 rounds.\n"
+"This Scenario is played over 8 Rounds.\n"
 "\n"
 msgstr ""
-"Ten scenariusz jest rozgrywany w 8 rundach.\n"
+"Ten Scenariusz jest rozgrywany w 8 Rundach.\n"
 "\n"
 
 #. type: multicols*
@@ -235,24 +239,24 @@ msgstr ""
 #: coops/emerald_island.tex:34
 #, no-wrap
 msgid ""
-"\\textbf{Map tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.\n"
+"\\textbf{Map Tile Pool:} If you wish, you can distribute the II--III Tiles equally to each player rather than laying them out as proposed.\n"
 "\n"
-msgstr "\\textbf{Pula Kafelków Mapy:} Jeśli chcesz, możesz równomiernie rozdać płytki II--III każdemu z graczy, zamiast układać je zgodnie z proponowanym układem.\n"
+msgstr "\\textbf{Pula Kafelków Mapy:} Jeśli chcesz, możesz równomiernie rozdać Kafelki II--III każdemu z graczy, zamiast układać je zgodnie z proponowanym układem.\n"
 
 #. type: multicols*
 #: coops/emerald_island.tex:46
 #, no-wrap
 msgid ""
-"$\\boldsymbol{P}$ \\textbf{× Starting (I) Map tile}\n"
+"$\\boldsymbol{P}$ \\textbf{× Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
-"  \\item Starting Tiles of your chosen factions.\n"
-"  \\item Ignore any yellow lines between tiles I (but not between tiles I and tiles II--III)\n"
+"  \\item Starting Tiles of your chosen Factions.\n"
+"  \\item Ignore any yellow lines between Tiles I (but not between Tiles I and Tiles II--III)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "$\\boldsymbol{G}$ \\textbf{× Początkowy (I) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
-"  \\item Początkowe Kafelki wybranych frakcji.\n"
+"  \\item Początkowe Kafelki wybranych Frakcji.\n"
 "  \\item Zignoruj żółte granice pomiędzy Kafelkami I (ale nie pomiędzy Kafelkami II--III).\n"
 "\\end{itemize}\n"
 "\n"
@@ -261,7 +265,7 @@ msgstr ""
 #: coops/emerald_island.tex:48
 #, no-wrap
 msgid ""
-"$\\boldsymbol{4 P}$ \\textbf{× Far (II--III) Map tile}\n"
+"$\\boldsymbol{4 P}$ \\textbf{× Far (II--III) Map Tile}\n"
 "\n"
 msgstr ""
 "$\\boldsymbol{4 G}$ \\textbf{× Daleki (II-III) Kafelek Mapy}\n"
@@ -271,10 +275,10 @@ msgstr ""
 #: coops/emerald_island.tex:52
 #, no-wrap
 msgid ""
-"Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)\n"
+"Flag all Mines and Settlements. (Don't forget the Building Materials Mine in Tile I. Each Tile II--III contains one Mine or Settlement with a Level III fight.)\n"
 "\n"
 msgstr ""
-"Oflaguj wszystkie Kopalnie i Osady. (Nie zapomnij o Kopalni budulców na kafelku I. Każdy kafelek II--III zawiera jedną Kopalnię lub Osadę z walką na poziomie III.)\n"
+"Oflaguj wszystkie Kopalnie i Osady. (Nie zapomnij o Kopalni Budulców na Kafelku I. Każdy Kafelek II--III zawiera jedną Kopalnię lub Osadę z Walką na Poziomie III.)\n"
 "\n"
 
 #. type: multicols*
@@ -293,13 +297,13 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{5} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item Gain again the result of one field with a Black Cube.\n"
+"  \\item Gain again the result of one Field with a Black Cube.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Runda 5.:}\n"
 "\\begin{itemize}\n"
-"  \\item Zyskaj nagrodę jednego pola z Czarną Kostką.\n"
+"  \\item Zyskaj nagrodę jednegoPola z Czarną Kostką.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -310,17 +314,17 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\\begin{itemize}\n"
 "    \\item You can't build a \\svgunit{golden} Dwelling.\n"
-"    \\item You can give Units to another player, even outside your turn, if one of your Heroes is:\n"
+"    \\item You can give Units to another player, even outside your Turn, if one of your Heroes is:\n"
 "    \\begin{itemize}\n"
-"        \\item On the same Map tile as another player's Hero.\n"
+"        \\item On the same Map Tile as another player's Hero.\n"
 "        \\item In another player's Town.\n"
 "        \\item Next to another player's Hero.\n"
 "    \\end{itemize}\n"
-"    \\item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your faction's Unit pool (even if another player has one or more of your Units). This includes units you've previously given to another player.\n"
+"    \\item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your Faction's Unit pool (even if another player has one or more of your Units). This includes Units you've previously given to another player.\n"
 "    \\item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.\n"
-"    \\item For the last Mine/Settlement battle, add a \\svgunit{golden} Neutral Unit. You have unlimited turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
-"    \\item The first time you reach level IV, gain your second specialty.\n"
-"    \\item When you reach level IV, move your token on the level tracker to level III.\n"
+"    \\item For the last Mine/Settlement battle, add a \\svgunit{golden} Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
+"    \\item The first time you reach Level IV, gain your second specialty.\n"
+"    \\item When you reach Level IV, move your Token on the Level tracker to Level III.\n"
 "    \\item Additionally, no player can:\n"
 "    \\begin{itemize}\n"
 "        \\item Attack other Heroes.\n"
@@ -332,17 +336,17 @@ msgstr ""
 "\\subsection*{\\MakeUppercase{Dodatkowe Zasady}}\n"
 "\\begin{itemize}\n"
 "    \\item Nie możesz zbudować \\svgunit{golden} Siedliska.\n"
-"    \\item Możesz przekazywać jednostki innemu graczowi, nawet poza swoją turą, jeśli jeden z twoich Bohaterów jest:\n"
+"    \\item Możesz przekazywać Jednostki innemu graczowi, nawet poza swoją Turą, jeśli jeden z twoich Bohaterów jest:\n"
 "    \\begin{itemize}\n"
-"        \\item Na tym samym kafelku mapy co bohater innego gracza.\n"
-"        \\item W mieście innego gracza.\n"
-"        \\item Obok bohatera innego gracza.\n"
+"        \\item Na tym samym Kafelku mapy co Bohater innego gracza.\n"
+"        \\item W Mieście innego gracza.\n"
+"        \\item Obok Bohatera innego gracza.\n"
 "    \\end{itemize}\n"
-"    \\item Jeśli nie masz jednostek w swojej talii jednostek (po walce lub jeśli nie zachowasz co najmniej jednej jednostki), zwróć wszystkie swoje jednostki do puli jednostek twojej frakcji (nawet jeśli inny gracz ma jedną lub więcej twoich jednostek). Obejmuje to jednostki, które wcześniej przekazałeś innemu graczowi.\n"
-"    \\item Będąc w mieście innego gracza, możesz rekrutować lub wzmacniać ich jednostki, albo dla nich, albo dla siebie. Potrzebujesz na to zgody innego gracza. Odpowiednie Siedliska lub Cytadela muszą być zbudowane.\n"
-"    \\item Do ostatniej walki o Kopalnię/Osadę dodaj Neutralną \\svgunit{golden} Jednostkę. Masz nieograniczoną liczbę rund na tę walkę. Nie możesz użyć Mistrzowskiej Dyplomacji, aby pominąć tę walkę!\n"
-"    \\item Przy pierwszym osiągnięciu poziomu IV, zdobądź swoją drugą specjalizację.\n"
-"    \\item Po osiągnięciu poziomu IV, przenieś swoją kostkę na liczniku poziomów na poziom III.\n"
+"    \\item Jeśli nie masz Jednostek w swojej talii Jednostek (po Walce lub jeśli nie zachowasz co najmniej jednej Jednostki), zwróć wszystkie swoje Jednostki do puli Jednostek twojej Frakcji (nawet jeśli inny gracz ma jedną lub więcej twoich Jednostek). Obejmuje to Jednostki, które wcześniej przekazałeś innemu graczowi.\n"
+"    \\item Będąc w Mieście innego gracza, możesz rekrutować lub wzmacniać ich Jednostki, albo dla nich, albo dla siebie. Potrzebujesz na to zgody innego gracza. Odpowiednie Siedliska lub Cytadela muszą być zbudowane.\n"
+"    \\item Do ostatniej Walki o Kopalnię/Osadę dodaj Neutralną \\svgunit{golden} Jednostkę. Masz nieograniczoną liczbę Rund na tę Walkę. Nie możesz użyć Mistrzowskiej Dyplomacji, aby pominąć tę Walkę!\n"
+"    \\item Przy pierwszym osiągnięciu Poziomu IV, zdobądź swoją drugą specjalizację.\n"
+"    \\item Po osiągnięciu Poziomu IV, przenieś swoją Lostkę na liczniku Poziomów na Poziom III.\n"
 "    \\item Dodatkowo, żaden gracz nie może:\n"
 "    \\begin{itemize}\n"
 "        \\item Atakować innych bohaterów.\n"
@@ -365,30 +369,30 @@ msgstr ""
 msgid ""
 "\\begin{center}\n"
 "  \\includegraphics[width=0.2\\paperwidth]{\\maps/emerald-1.png}\n"
-"  \\captionof{figure}{1-PLAYER SCENARIO}\n"
+"  \\captionof{figure}{\\textbf{1-PLAYER SCENARIO}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-2.png}\n"
-"  \\captionof{figure}{2-PLAYER SCENARIO}\n"
+"  \\captionof{figure}{\\textbf{2-PLAYER SCENARIO}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-3.png}\n"
-"  \\captionof{figure}{3-PLAYER SCENARIO}\n"
+"  \\captionof{figure}{\\textbf{3-PLAYER SCENARIO}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-4.png}\n"
-"  \\captionof{figure}{4-PLAYER SCENARIO}\n"
+"  \\captionof{figure}{\\textbf{4-PLAYER SCENARIO}}\n"
 "\\end{center}\n"
 "\n"
 msgstr ""
 "\\begin{center}\n"
 "  \\includegraphics[width=0.2\\paperwidth]{\\maps/emerald-1.png}\n"
-"  \\captionof{figure}{SCENARIUSZ JEDNOOSOBOWY}\n"
+"  \\captionof{figure}{\\textbf{SCENARIUSZ 1-OSOBOWY}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-2.png}\n"
-"  \\captionof{figure}{SCENARIUSZ DWUOSOBOWY}\n"
+"  \\captionof{figure}{\\textbf{SCENARIUSZ 2-OSOBOWY}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-3.png}\n"
-"  \\captionof{figure}{SCENARIUSZ TRZYOSOBOWY}\n"
+"  \\captionof{figure}{\\textbf{SCENARIUSZ 3-OSOBOWY}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-4.png}\n"
-"  \\captionof{figure}{SCENARIUSZ CZTEROOSOBOWY}\n"
+"  \\captionof{figure}{\\textbf{SCENARIUSZ 4-OSOBOWY}}\n"
 "\\end{center}\n"
 "\n"
