--- a/translations/inferno_deal_with_the_devil.tex/fr.po
+++ b/translations/inferno_deal_with_the_devil.tex/fr.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-22 23:28+0200\n"
 "PO-Revision-Date: 2024-07-02 09:52+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -31,9 +31,44 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
+#: coops/sentinels.tex:16 clash/dragoncurse_castle.tex:17
+#: campaigns/inferno_devilish_plan.tex:18
+#: campaigns/inferno_steadwicks_fall.tex:16
+#: campaigns/inferno_deal_with_the_devil.tex:20
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Scenario Length}}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: coops/sentinels.tex:20 coops/titans_stronghold.tex:21
+#: coops/emerald_island.tex:18 clash/dragoncurse_castle.tex:21
+#: campaigns/inferno_devilish_plan.tex:22
+#: campaigns/inferno_steadwicks_fall.tex:20
+#: campaigns/inferno_deal_with_the_devil.tex:24
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Player Setup}}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: coops/sentinels.tex:40 coops/titans_stronghold.tex:41
+#: coops/emerald_island.tex:38 clash/the_hunt.tex:37
+#: campaigns/inferno_devilish_plan.tex:65
+#: campaigns/inferno_steadwicks_fall.tex:70
+#: campaigns/inferno_deal_with_the_devil.tex:77
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Map Setup}}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
 #: coops/sentinels.tex:57 coops/titans_stronghold.tex:60
 #: coops/emerald_island.tex:50 campaigns/inferno_devilish_plan.tex:98
-#: campaigns/inferno_steadwicks_fall.tex:116
+#: campaigns/inferno_steadwicks_fall.tex:111
 #: campaigns/inferno_deal_with_the_devil.tex:110
 #, no-wrap
 msgid ""
@@ -44,7 +79,7 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:61 coops/titans_stronghold.tex:64
 #: coops/emerald_island.tex:54 campaigns/inferno_devilish_plan.tex:102
-#: campaigns/inferno_steadwicks_fall.tex:121
+#: campaigns/inferno_steadwicks_fall.tex:116
 #: campaigns/inferno_deal_with_the_devil.tex:114
 #, no-wrap
 msgid ""
@@ -56,7 +91,7 @@ msgstr ""
 #: coops/sentinels.tex:67 coops/titans_stronghold.tex:68
 #: coops/emerald_island.tex:58 clash/bloody_grail.tex:64 clash/the_hunt.tex:65
 #: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:108
-#: campaigns/inferno_steadwicks_fall.tex:129
+#: campaigns/inferno_steadwicks_fall.tex:124
 #: campaigns/inferno_deal_with_the_devil.tex:120
 #, no-wrap
 msgid ""
@@ -65,13 +100,13 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/titans_stronghold.tex:21 coops/emerald_island.tex:18
-#: campaigns/inferno_devilish_plan.tex:22
-#: campaigns/inferno_steadwicks_fall.tex:20
-#: campaigns/inferno_deal_with_the_devil.tex:24
+#: coops/sentinels.tex:91 clash/the_hunt.tex:72
+#: campaigns/inferno_devilish_plan.tex:148
+#: campaigns/inferno_steadwicks_fall.tex:188
+#: campaigns/inferno_deal_with_the_devil.tex:173
 #, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{Player setup}}\n"
+"\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\n"
 msgstr ""
 
@@ -91,16 +126,6 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\textbf{Author:} Tm335\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:18
-#: campaigns/inferno_steadwicks_fall.tex:16
-#: campaigns/inferno_deal_with_the_devil.tex:20
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Scenario length}}\n"
 "\n"
 msgstr ""
 
@@ -149,17 +174,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:46
 #, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{AI hero setup}}\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:65
-#: campaigns/inferno_steadwicks_fall.tex:70
-#: campaigns/inferno_deal_with_the_devil.tex:77
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Map setup}}\n"
+"\\subsection*{\\MakeUppercase{AI Hero Setup}}\n"
 "\n"
 msgstr ""
 
@@ -169,27 +184,17 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:100
 #, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{Heroes placement}}\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:148
-#: campaigns/inferno_steadwicks_fall.tex:193
-#: campaigns/inferno_deal_with_the_devil.tex:173
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Additional rules}}\n"
+"\\subsection*{\\MakeUppercase{Heroes Placement}}\n"
 "\n"
 msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:150
-#: campaigns/inferno_steadwicks_fall.tex:195
+#: campaigns/inferno_steadwicks_fall.tex:190
 #: campaigns/inferno_deal_with_the_devil.tex:175
 #, no-wrap
 msgid ""
-"During this ``Inferno'' campaign scenario, the following rules apply:\n"
+"During this ``Inferno'' Campaign Scenario, the following rules apply:\n"
 "\n"
 msgstr ""
 
@@ -198,7 +203,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:79
 #, no-wrap
 msgid ""
-"Take the following Map tiles and set them up as shown in the scenario map layout:\n"
+"Take the following Map Tiles and set them up as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
 
@@ -207,7 +212,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:3
 msgid ""
 "\\addscenariosection[subsection]{1}{Inferno Campaign $-$ Dungeons and Devils}"
-"{3. Deal With The Devil}{\\images/firewall.png}"
+"{3. Deal With the Devil}{\\images/firewall.png}"
 msgstr ""
 
 #. type: multicols*
@@ -237,7 +242,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:22
 #, no-wrap
 msgid ""
-"This scenario plays out over 14 rounds.\n"
+"This Scenario plays out over 14 Rounds.\n"
 "\n"
 msgstr ""
 
@@ -354,7 +359,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:69
 #, no-wrap
 msgid ""
-"Charging Armies \\#1 and \\#2 use the same AI deck and Skill deck. Reshuffle both decks after combat.\n"
+"Charging Armies \\#1 and \\#2 use the same AI Deck and Skill Deck. Reshuffle both Decks after Combat.\n"
 "\n"
 msgstr ""
 
@@ -364,9 +369,9 @@ msgstr ""
 msgid ""
 "Both Artifact cards of all Charging Armies are treated as Skills, and use the top ``less powerful'' effect on the card.\n"
 "The ``Sword of Hellfire'' will be used in attacks and retaliation attacks. It is not used when attacking Walls or Gates,\n"
-"and remains in effect on the unit. If ``Shield of the Damned'' is drawn, it takes effect when\n"
+"and remains in effect on the Unit. If ``Shield of the Damned'' is drawn, it takes effect when\n"
 "any Charging Army Unit takes attack or retaliation damage. If the AI Skill card advises ``do it again'', the Artifact\n"
-"cards are not played again immediately, but instead are played as soon as the next unit is able to use them.\n"
+"cards are not played again immediately, but instead are played as soon as the next Unit is able to use them.\n"
 "\n"
 msgstr ""
 
@@ -374,7 +379,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:86
 #, no-wrap
 msgid ""
-"\\textbf{3 × Starting (I) Map tile}\n"
+"\\textbf{3 × Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item 1 × Inferno (S6)\n"
 "  \\item 1 × Castle (S3)\n"
@@ -387,7 +392,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:93
 #, no-wrap
 msgid ""
-"\\textbf{7 × Far (II--III) Map tile}\n"
+"\\textbf{7 × Far (II--III) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item 3 × Inferno (F16, F17, F18)\n"
 "  \\item 3 × Castle (F3, \\#F4, F6)\n"
@@ -400,7 +405,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:98
 #, no-wrap
 msgid ""
-"\\textbf{1 × Near (IV--V) Map tile}\n"
+"\\textbf{1 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item 1 × Inferno (N12)\n"
 "\\end{itemize}\n"
@@ -411,7 +416,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:102
 #, no-wrap
 msgid ""
-"The Enemy Charging Rampart Hero \\#1 starts on the center field of the S4 Starting Map tile.\n"
+"The Enemy Charging Rampart Hero \\#1 starts on the center Field of the S4 Starting Map Tile.\n"
 "\n"
 msgstr ""
 
@@ -419,7 +424,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:104
 #, no-wrap
 msgid ""
-"The Enemy Charging Castle Hero \\#1 starts on the center field of S3 Starting Map tile.\n"
+"The Enemy Charging Castle Hero \\#1 starts on the center Field of S3 Starting Map Tile.\n"
 "\n"
 msgstr ""
 
@@ -427,7 +432,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:106
 #, no-wrap
 msgid ""
-"Place your Hero on the center field of the S6 Inferno Starting Map tile.\n"
+"Place your Hero on the center Field of the S6 Inferno Starting Map Tile.\n"
 "\n"
 msgstr ""
 
@@ -435,7 +440,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:108
 #, no-wrap
 msgid ""
-"You cannot recruit a Secondary Hero.\n"
+"You cannot Recruit a Secondary Hero.\n"
 "\n"
 msgstr ""
 
@@ -482,7 +487,7 @@ msgid ""
 "\\textbf{\\nth{2} Round:}\n"
 "\\begin{itemize}\n"
 "  \\item Read: ``Castle and AvLee armies will be at our gates soon. They must come through the volcanic corridor\n"
-"    to our east. We cannot meet them in battle on the field, we must defend from within Kleesive, where\n"
+"    to our east. We cannot meet them in battle on the Field, we must defend from within Kleesive, where\n"
 "    their magic is diminished on this cursed ground.''\n"
 "\\end{itemize}\n"
 "\n"
@@ -506,7 +511,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{4} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item The first armies will attack this round and next round. Prepare your defenses!\n"
+"  \\item The first armies will attack this Round and next Round. Prepare your defenses!\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -517,8 +522,8 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{7} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item The Enemy Castle Charging Hero \\#2 appears on the Settlement field of the F3 tile or on the center field of S3 Starting Map tile (your choice).\n"
-"  \\item The Enemy Rampart Charging Hero \\#2 appears on the center field of the S4 Starting Map tile.\n"
+"  \\item The Enemy Castle Charging Hero \\#2 appears on the Settlement Field of the F3 Tile or on the center Field of S3 Starting Map Tile (your choice).\n"
+"  \\item The Enemy Rampart Charging Hero \\#2 appears on the center Field of the S4 Starting Map Tile.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -529,7 +534,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{10} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item The second armies will attack this round and next round. Prepare your defenses!\n"
+"  \\item The second armies will attack this Round and next Round. Prepare your defenses!\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -540,7 +545,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{12} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item The Final Charging Enemy Army appears on the Settlement field of the F3 tile. This army has 4 MPs per turn.\n"
+"  \\item The Final Charging Enemy Army appears on the Settlement Field of the F3 Tile. This army has 4 MPs per Turn.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -551,7 +556,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{16} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item The Final Charging Army will attack this round. We must hold Kleesive at all costs!\n"
+"  \\item The Final Charging Army will attack this Round. We must hold Kleesive at all costs!\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -560,7 +565,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:171
 #, no-wrap
 msgid ""
-"\\textbf{When you complete the scenario:}\n"
+"\\textbf{When you complete the Scenario:}\n"
 "\\begin{itemize}\n"
 "  \\item Read: ``Congratulations! You have defended Kleesive and are victorious!''\n"
 "\\end{itemize}\n"
@@ -575,23 +580,23 @@ msgid ""
 "  \\item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.\n"
 "  \\item You cannot attack Enemy Charging Heroes. You can only defend against them while inside of Kleesive.\n"
 "  \\item Gain 3 \\svg{gold} when you defeat a Charging Hero's Army.\n"
-"  \\item If an Enemy Charging Hero enters a map tile or field that your Main Hero is on (exception is if you are in\n"
-"    your Inferno city Kleesive), or if a charging hero attacks Kleesive and you are not present in your city\n"
+"  \\item If an Enemy Charging Hero enters a Map Tile or Field that your Main Hero is on (exception is if you are in\n"
+"    your Inferno city Kleesive), or if a charging Hero attacks Kleesive and you are not present in your city\n"
 "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
 "    you have, lose 3 \\svg{gold}, gain \\svg{morale_negative}, and randomly discard 1 card from your hand.\n"
 "  \\item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest\n"
-"    route to Kleesive. If you own a mine in a map tile they enter, they will capture the mine (but will not\n"
+"    route to Kleesive. If you own a Mine in a Map Tile they enter, they will capture the Mine (but will not\n"
 "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
 "    else. They also make use of Stables 1 MP bonus.\n"
 "  \\item Enemy Charging Heros always move amongst each to not ``block'' each other's paths (thus slowing each\n"
 "    other down). The Enemy Charging Hero that can get closest to Kleesive will move before any others.\n"
-"  \\item Castle and Rampart already have all mines controlled in their territory (non-Inferno map tiles). Place enemy\n"
-"    cubes on all of their mines.\n"
-"  \\item Your walls, gates, and arrow tower in Kleesive are completely rebuilt after each battle.\n"
-"  \\item Enemy \\svg{unit_flying} units will fly over walls and gates to attack your units whenever possible.\n"
-"  \\item Enemy \\svg{unit_ranged} units will always attack the Arrow Tower once there are no other \\svg{unit_ranged} units to attack.\n"
-"  \\item Enemy units will always attack your units if possible. Only when that is not possible, then the gate,\n"
-"    and then walls will be attacked.\n"
+"  \\item Castle and Rampart already have all Mines controlled in their territory (non-Inferno Map Tiles). Place enemy\n"
+"    cubes on all of their Mines.\n"
+"  \\item Your Walls, Gates, and Arrow Tower in Kleesive are completely rebuilt after each battle.\n"
+"  \\item Enemy \\svg{unit_flying} Units will fly over Walls and Gates to attack your Units whenever possible.\n"
+"  \\item Enemy \\svg{unit_ranged} Units will always attack the Arrow Tower once there are no other \\svg{unit_ranged} Units to attack.\n"
+"  \\item Enemy Units will always attack your Units if possible. Only when that is not possible, then the Gate,\n"
+"    and then Walls will be attacked.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
